--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h1 .mid::before{
 }
 @keyframes rotate{
     0%{
-        transform: rotateY(0deg); /*rotate3d(0, 1, 0.25, 0deg);*/
+        transform: rotateY(0deg);
     }
     100%{
         transform: rotateY(360deg);
