--- a/style.css
+++ b/style.css
@@ -40,10 +40,10 @@ h1 .mid::before{
     content: 'o';
     color: #ffffff;
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 0;
     z-index: 100;
-     transform: rotateY(10deg);
+    transform: rotateY(10deg);
     display: block;
     width: 50%;
     overflow: hidden;
